Update DefaultMimeMapper.java